--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Exemplo: src="minha-foto-da-praca.jpg"
       -->
       <a-assets>
-        <img id="praca-360" src="NOME_DA_SUA_IMAGEM.jpg">
+        <img id="praca-360" src="aerial-drone-panoramic-view-old-brasov-centre-romania.jpg">
       </a-assets>
 
       <!-- Fundo Imersivo 360 -->
@@ -90,4 +90,5 @@
     </a-scene>
   </body>
 </html>
+
 
